# deep_hedging

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: results.csv
scripts/: backtest_real_data.py  train_and_evaluate.py
src/deephedge/: __init__.py  baseline.py  hedge.py  market.py  nn.py  pnl.py  risk.py  train.py
tests/: test_baseline.py  test_hedge_bptt.py  test_market.py  test_nn.py  test_pnl.py  test_training_behavior.py
